style.css
html {
  font-family: sans-serif;
}

.navbar {   
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
}
  
/* Links inside the navbar */
.navbar a {
  padding: 8px 8px 30px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s; 
}

/* Add a turquoise background color to navbar links on hover */
.navbar a:hover {
  color: #f1f1f1;
}

.navbar .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

body {
  transition: margin-left .5s;
  padding: 20px;
  background-image: url('sebastien-gabriel--IMlv9Jlb24-unsplash.jpg');
}
main {
  display: flex;
  justify-content: space-evenly;
  margin-top: 15px;
  padding: 16px;
}

form {
  margin-top: 15px;
  margin-left: 50px;
}

h2 {
  color: darkcyan;
  padding: 10px 0px 0px 20px;
}

label {
  font-size: 30px;
  color: darkcyan;
}

input[type=text] {
  width: 90%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 2px;
  margin-bottom: 10px;
  resize: vertical;
}

input[type=submit] {
  font-size: 20px;
  background-color: #218624;
  margin-bottom: 5px;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

textarea {
  width: 80%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

.contactForm {
  margin-left: 50px;
  width: 50%;
  padding: 20px;
  background-color: whitesmoke;
  box-shadow: 10px 10px 5px grey;
  border-radius: 20px;
  background-color: #f2f2f2;
  
}

.date {
  font-style: italic;
}
.Box {
  background-color: whitesmoke;
  box-shadow: 10px 10px 5px grey;
  border-radius: 20px;
  width: 30%;
}

footer {
  font-size: 20px;
  text-align: right;
}

